<resources>
    <string name="app_name">Quantom</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_category">Category</string>
    <string name="menu_cart">Add to cart</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_add_to_cart">Add to cart</string>
    <string name="menu_profile_nav">Profile</string>
    <string name="menu_category_nav">Category</string>
    <string name="todo">TODO</string>
    <string name="_3_pies_suit">3 PIES SUIT</string>
    <string name="todo1">TODO</string>
    <string name="start">START</string>
    <string name="_4999">4999/-</string>
    <string name="trousers">TROUSERS</string>
    <string name="shoes">SHOES</string>
    <string name="jacket">JACKET</string>
    <string name="kurta_paijama_set">KURTA PAIJAMA SET</string>
    <string name="blazer">BLAZER</string>
    <string name="shirt">SHIRT</string>
    <string name="todo2">todo</string>
    <string name="todo3">todo</string>
    <string name="todo4">todo</string>
    <string name="todo5">todo</string>
    <string name="todo6">todo</string>
    <string name="todo7">todo</string>
    <string name="white_kurta">White Kurta</string>
    <string name="price">Price :</string>
    <string name="_349">349/-</string>
    <string name="_399">399/-</string>
    <string name="colors">Colors :</string>
    <string name="blue">Blue</string>
    <string name="size">Size :</string>
    <string name="_28">28</string>
    <string name="size_chart">Size Chart :</string>
    <string name="description">Description :</string>
    <string name="kurta_pajamas_have_always_been_the_first_choice_of_men_when_it_comes_shopping_for_ethnic_wear_as_they_offer_the_utmost_comfort_to_the_wearer_in_addition_to_that_we_have_one_of_the_finest_collection_of_kurta_pajamas_for_men_online_made_available_at_cut_rate_prices_our_men_s_ethnic_wear_collection_includes_trustworthy_clothing_brands_like_manyavar_kurta_pyjamas_check_out_our_complete_range_of_kurta_pajamas_for_men_which_includes_several_sizes_palette_of_colors_materials_patterns_sleeves_and_fittings_go_with_the_one_that_you_like_the_most_and_make_the_most_of_your_online_shopping_experience_by_availing_amazing_cashback_offers">Kurta Pajamas have always been the first choice of men when it comes shopping for ethnic wear, as they offer the utmost comfort to the wearer. In addition to that, we have one of the finest collection of Kurta Pajamas For Men online made available at cut-rate prices. Our men\'s ethnic wear collection includes trustworthy clothing brands like Manyavar Kurta Pyjamas. Check out our complete range of Kurta Pajamas For Men, which includes several sizes, palette of colors, materials, patterns, sleeves, and fittings. Go with the one that you like the most and make the most of your online shopping experience by availing amazing cashback offers.</string>
    <string name="customize">Customize</string>
    <string name="buy">Buy</string>
    <string name="white_kurta1">White Kurta</string>
    <string name="_499">499/-</string>
    <string name="_3991">399</string>

</resources>