<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.raysapp.quantom.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.raysapp.quantom.ui.category.CategoryFragment"
        android:label="@string/menu_category_nav"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.raysapp.quantom.ui.addtocart.MycartFragment"
        android:label="@string/menu_add_to_cart"
        tools:layout="@layout/fragment_mycart" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.raysapp.quantom.ui.profile.ProfileFragment"
        android:label="@string/menu_profile_nav"
        tools:layout="@layout/fragment_profile"/>
</navigation>